--- a/.github/workflows/php-test.yml
+++ b/.github/workflows/php-test.yml
@@ -24,11 +24,10 @@ jobs:
         php-version: ${{ matrix.php-version }}
 
     - name: Install Dependencies
-      run: composer install --no-progress --no-suggest --prefer-dist
+      run: composer install --no-progress --prefer-dist
 
     - name: Run Tests
       run: |
-        php -l src/Metar.php
-        # Add your tests here, for example:
-        # vendor/bin/phpunit
+        vendor/bin/phpunit --testdox  tests
+        
 
